titleSceneを追加、エンターキーでシーンチェンジ

--- a/KamataEngineNovice20231201_PG2_exam.vcxproj
+++ b/KamataEngineNovice20231201_PG2_exam.vcxproj
@@ -124,6 +124,7 @@ xcopy C:\KamataEngine\DirectXGame\Resources "$(OutDirFullPath)NoviceResources" /
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="randPlus.cpp" />
+    <ClCompile Include="Title.cpp" />
     <ClCompile Include="Vec2Op.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -162,6 +163,7 @@ xcopy C:\KamataEngine\DirectXGame\Resources "$(OutDirFullPath)NoviceResources" /
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="randPlus.h" />
+    <ClInclude Include="Title.h" />
     <ClInclude Include="Vec2Op.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
