--- a/KamataEngineNovice20231201_PG2_exam.vcxproj.filters
+++ b/KamataEngineNovice20231201_PG2_exam.vcxproj.filters
@@ -20,6 +20,9 @@
     <Filter Include="Function">
       <UniqueIdentifier>{bde70497-a09c-45d9-92a4-6ee99b6c6af0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{0d0c9a9d-2c8d-4abc-a17e-9a817a794d3b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="C:\KamataEngine\DirectXGame\base\DirectXCommon.cpp">
@@ -69,7 +72,10 @@
       <Filter>Function</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
-      <Filter>KamataEngine</Filter>
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Title.cpp">
+      <Filter>Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +174,11 @@
     <ClInclude Include="randPlus.h">
       <Filter>Function</Filter>
     </ClInclude>
-    <ClInclude Include="Game.h" />
+    <ClInclude Include="Game.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Title.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
