--- a/KamataEngineNovice20231201_PG2_exam.vcxproj.filters
+++ b/KamataEngineNovice20231201_PG2_exam.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="Title.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
+    <ClCompile Include="TitleLetter.cpp">
+      <Filter>Adapter</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\KamataEngine\DirectXGame\audio\Audio.h">
@@ -179,6 +182,9 @@
     </ClInclude>
     <ClInclude Include="Title.h">
       <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="TitleLetter.h">
+      <Filter>Adapter</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
